--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -1,31 +1,31 @@
 {
   "expo": {
-    "name": "AgendaPlantão",
-    "slug": "agendaplantao",
+    "name": "CONFIRMA PLANTÃO",
+    "slug": "confirma-plantao",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "agendaplantao",
+    "icon": "./assets/brand/icon.png",
+    "scheme": "confirma-plantao",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/brand/logo-full.png",
       "resizeMode": "contain",
       "backgroundColor": "#09090f"
     },
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.agendaplantao.app",
+      "bundleIdentifier": "com.confirmaplantao.app",
       "infoPlist": {
         "UIBackgroundModes": ["remote-notification"],
-        "NSFaceIDUsageDescription": "Use Face ID para autenticar no AgendaPlantão"
+        "NSFaceIDUsageDescription": "Use Face ID para autenticar no CONFIRMA PLANTÃO"
       }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#6366f1"
+        "foregroundImage": "./assets/brand/adaptive-icon.png",
+        "backgroundColor": "#4ECDC4"
       },
-      "package": "com.agendaplantao.app",
+      "package": "com.confirmaplantao.app",
       "googleServicesFile": "./google-services.json",
       "permissions": [
         "android.permission.RECEIVE_BOOT_COMPLETED",
@@ -37,15 +37,15 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/brand/favicon.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-notifications",
         {
-          "icon": "./assets/images/notification-icon.png",
-          "color": "#6366f1",
+          "icon": "./assets/brand/notification-icon.png",
+          "color": "#4ECDC4",
           "sounds": []
         }
       ],
@@ -54,7 +54,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/brand/logo-full.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#09090f"
