--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,8 +18,8 @@
     "@agendaplantao/shared": "workspace:*",
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^4.6.4",
-    "@react-native-async-storage/async-storage": "2.1.0",
-    "@shopify/flash-list": "1.7.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "^5.66.0",
     "date-fns": "^4.1.0",
     "expo": "~51.0.39",
@@ -28,6 +28,7 @@
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.10",
     "expo-haptics": "~13.0.1",
+    "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
     "expo-navigation-bar": "~3.0.7",
     "expo-notifications": "~0.28.19",
@@ -39,26 +40,25 @@
     "moti": "^0.29.0",
     "nativewind": "^4.1.23",
     "react": "18.2.0",
-    "react-native": "0.74.6",
+    "react-native": "0.74.5",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "react-native-calendars": "^1.1306.0",
-    "react-native-mmkv": "^2.12.2",
     "socket.io-client": "^4.8.1",
-    "zustand": "^5.0.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.2.79",
-    "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.18.0",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "typescript": "^5.3.3"
   }
 }
