--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "AgendaPlantão",
-  "short_name": "Plantão",
-  "description": "Gestão inteligente de escalas e plantões médicos hospitalares",
-  "start_url": "/overview",
+  "name": "CONFIRMA PLANTÃO",
+  "short_name": "CONFIRMA",
+  "description": "Gestão inteligente de escalas e confirmações de plantão médico",
+  "start_url": "/",
   "display": "standalone",
   "display_override": ["window-controls-overlay", "standalone"],
   "orientation": "portrait-primary",
-  "background_color": "#09090f",
-  "theme_color": "#6366f1",
+  "background_color": "#f2f4f6",
+  "theme_color": "#4ecdc4",
   "categories": ["medical", "productivity", "business"],
   "lang": "pt-BR",
   "scope": "/",
