--- a/api/package.json
+++ b/api/package.json
@@ -11,12 +11,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:migrate:prod": "prisma migrate deploy",
-    "db:seed": "ts-node -r tsconfig-paths/register prisma/seed.ts",
-    "db:studio": "prisma studio",
-    "db:reset": "prisma migrate reset"
+    "db:generate": "node ../scripts/with-root-env.cjs prisma generate",
+    "db:migrate": "node ../scripts/with-root-env.cjs prisma migrate dev",
+    "db:migrate:prod": "node ../scripts/with-root-env.cjs prisma migrate deploy",
+    "db:seed": "node ../scripts/with-root-env.cjs ts-node -r tsconfig-paths/register prisma/seed.ts",
+    "db:studio": "node ../scripts/with-root-env.cjs prisma studio",
+    "db:reset": "node ../scripts/with-root-env.cjs prisma migrate reset"
   },
   "dependencies": {
     "@agendaplantao/shared": "workspace:*",
