feat(api): add AWS S3 storage module with LGPD compliance
- StorageService: S3 client with AES256 encryption at rest
- UploadsController: avatar, org-logo, documents with validation
- Pre-signed URLs for time-limited secure access (LGPD)
- User/org data deletion endpoints (direito ao esquecimento)
- Multipart upload for large files (>5MB)
- Region sa-east-1 (São Paulo) for data residency
- Replaced Cloudflare R2 vars with AWS S3 vars
- Updated render.yaml with S3 env vars

--- a/render.yaml
+++ b/render.yaml
@@ -43,3 +43,11 @@ services:
         sync: false
       - key: JWT_REFRESH_EXPIRES_IN
         value: "30d"
+      - key: AWS_ACCESS_KEY_ID
+        sync: false
+      - key: AWS_SECRET_ACCESS_KEY
+        sync: false
+      - key: AWS_S3_REGION
+        value: "sa-east-1"
+      - key: AWS_S3_BUCKET
+        value: "plantaosync-storage"
