--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "@agendaplantao/shared": "workspace:*",
+    "@aws-sdk/client-s3": "^3.994.0",
+    "@aws-sdk/lib-storage": "^3.994.0",
+    "@aws-sdk/s3-request-presigner": "^3.994.0",
     "@nestjs/bullmq": "^10.2.3",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
@@ -44,6 +47,7 @@
     "firebase-admin": "^13.1.0",
     "helmet": "^8.0.0",
     "ioredis": "^5.4.2",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -61,6 +65,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.5",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
