--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -37,6 +37,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "ky": "^1.7.4",
+    "lucide-react-native": "^0.575.0",
     "moti": "^0.29.0",
     "nativewind": "^4.1.23",
     "react": "18.2.0",
